5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1724_2522.log
== TEST (2019-05-14 10:25:48) 
-- CODE:
n = i = int(input())
s = 1.5

while(i>0):
	t = t*(1+i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t = t*(1+i/(2*i+1))
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:02) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1
while(i>0):
	t = t*(1+i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
264.2092873937
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:06) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1
while(i>0):
	t = t*(1+i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
264.2092873937
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:09) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1
while(i>0):
	t = t*(1+i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
264.2092873937
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:12) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1
while(i>0):
	t = t*(1+i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
264.2092873937
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:35) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1
while(i>0):
	t = 1+ t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
37.767939319
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:47) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1
while(i>0):
	t = 1+ t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
37.767939319
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:28:15) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1
while(i>=0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
39.767939319
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:28:28) 
-- CODE:
n = i = int(input())
s = 1.5
t = 
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- ERROR:
File "XXXX", line 3
    t = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:28:37) 
-- CODE:
n = i = int(input())
s = 1.5
t = 0
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
35.9712468474
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:29:40) 
-- CODE:
n = i = int(input())
s = 1.5
t = 0
while(i>0):
	t = t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:29:44) 
-- CODE:
n = i = int(input())
s = 1.5
t = 0
while(i>0):
	t = t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:29:49) 
-- CODE:
n = i = int(input())
s = 1.5
t = 0
while(i>0):
	t = t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:29:51) 
-- CODE:
n = i = int(input())
s = 1.5
t = 0
while(i>0):
	t = t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:14) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1
while(i>0):
	t = (1 + (i/(2*i+1)))*t
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
264.2092873937
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:30) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
37.767939319
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:35) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
37.767939319
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:18) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1 + i/(2*i+1)
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
38.6235071626
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:22) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1 + i/(2*i+1)
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
38.6235071626
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:24) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1 + i/(2*i+1)
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
38.6235071626
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:25) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1 + i/(2*i+1)
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
38.6235071626
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:26) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1 + i/(2*i+1)
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
38.6235071626
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:28) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1 + i/(2*i+1)
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
38.6235071626
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:30) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1 + i/(2*i+1)
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
38.6235071626
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:42:49) 
-- CODE:
n = i = int(input())
s = 1.5
t = 1 + i/(2*i+1)
while(i>0):
	t = 1 + t*(i/(2*i+1))
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- EXECUTION TIME:
0.162014
-- TEST CASE 1:
---- input:
10
---- correct output:
3.1413699476
---- user output:
38.6235071626
-- TEST CASE 2:
---- input:
150
---- correct output:
3.1415926536
---- user output:
593.4214221347
-- TEST CASE 3:
---- input:
100
---- correct output:
3.1415926536 
---- user output:
394.2241252619
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:44:24) 
-- CODE:
n = i = int(input())
s = 0
t = 1.5
while(i>0):
	t = 1 + (i/(2*i+1))*t
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
35.6662855548
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:44:28) 
-- CODE:
n = i = int(input())
s = 0
t = 1.5
while(i>0):
	t = 1 + (i/(2*i+1))*t
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
35.6662855548
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:44:33) 
-- CODE:
n = i = int(input())
s = 0
t = 1.5
while(i>0):
	t = 1 + (i/(2*i+1))*t
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
35.6662855548
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:45:05) 
-- CODE:
n = i = int(input())
s = 0
t = 1.5
while(i>0):
	t = (1+i/(2*i+1))*t
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
391.8139310905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:46:05) 
-- CODE:
n = i = int(input())
s = 0
t = 1.5
while(i>0):
	t = 1 + (i/(2*i+1))*t
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
35.6662855548
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:46:09) 
-- CODE:
n = i = int(input())
s = 0
t = 1.5
while(i>0):
	t = 1 + (i/(2*i+1))*t
	s += t
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
35.6662855548
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:46:58) 
-- CODE:
n = i = int(input())
s = 0
t = 1.5
while(i>0):
	t = (i/(2*i+1))*t
	s = s(1+t)
	i -= 1
pi = 2*s
print(round(pi,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s = s(1+t)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:07) 
-- CODE:
n = i = int(input())
s = 0
t = 1.5
while(i>0):
	t = (i/(2*i+1))*t
	s = s*(1+t)
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:10) 
-- CODE:
n = i = int(input())
s = 0
t = 1.5
while(i>0):
	t = (i/(2*i+1))*t
	s = s*(1+t)
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:24) 
-- CODE:
n = i = int(input())
s = 1
t = 1.5
while(i>0):
	t = (i/(2*i+1))*t
	s = s*(1+t)
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
6.0716951406
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:31) 
-- CODE:
n = i = int(input())
s = 1
t = 1.5
while(i>0):
	t = (i/(2*i+1))*t
	s = s*(1+t)
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
6.0716951406
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:37) 
-- CODE:
n = i = int(input())
s = 1
t = 1.5
while(i>0):
	t = (i/(2*i+1))*t
	s = s*(1+t)
	i -= 1
pi = 2*s
print(round(pi,10))
-- OUTPUT:
6.0716951406
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:26) 
-- CODE:
n = i = int(input())
s = 1
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:30) 
-- CODE:
n = i = int(input())
s = 1
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:32) 
-- CODE:
n = i = int(input())
s = 1
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:34) 
-- CODE:
n = i = int(input())
s = 1
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:36) 
-- CODE:
n = i = int(input())
s = 1
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:21) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	t = 1+(i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
4.2824759692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:24) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	t = 1+(i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
4.2824759692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:28) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	t = 1+(i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
4.2824759692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:40) 
-- CODE:
n = i = int(input())
t = 3.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1429535033
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:46) 
-- CODE:
n = i = int(input())
t = 2.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1424256514
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:49) 
-- CODE:
n = i = int(input())
t = 2.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1424256514
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:19) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	t = (1 + i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
350.5260887745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:23) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	t = (1 + i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
350.5260887745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:24) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	t = (1 + i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
350.5260887745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:26) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	t = (1 + i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
350.5260887745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:41) 
-- CODE:
n = i = int(input())
t = 2.5
while(i>0):
	t = (1 + i/(2*i+1))*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
192.1084483176
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:08) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:18) 
-- CODE:
i = int(input())
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:33) 
-- CODE:
i = int(input())
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:36) 
-- CODE:
i = int(input())
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:38) 
-- CODE:
i = int(input())
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:40) 
-- CODE:
i = int(input())
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:42) 
-- CODE:
i = int(input())
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:44) 
-- CODE:
i = int(input())
t = 1.5
while(i>0):
	t = (i/(2*i+1))*(1+t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
1.1418977995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:54:38) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	if n == i:
		t = 1+t
	else:
		t = 1 + i/(2*i+1)*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
3.1422409032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:54:44) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	if n == i:
		t = 1+t
	else:
		t = 1 + i/(2*i+1)*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
3.1422409032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:54:46) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	if n == i:
		t = 1+t
	else:
		t = 1 + i/(2*i+1)*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
3.1422409032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:54:47) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	if n == i:
		t = 1+t
	else:
		t = 1 + i/(2*i+1)*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
3.1422409032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:54:50) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	if n == i:
		t = 1+t
	else:
		t = 1 + i/(2*i+1)*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
3.1422409032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:54:56) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	if n == i:
		t = 1+t
	else:
		t = 1 + i/(2*i+1)*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
3.1422409032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:55:34) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	if n == i:
		t = 1+t
	else:
		t = 1 + i/(2*i+1)*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
3.1422409032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:55:57) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	if n == i-1:
		t = 1+t
	else:
		t = 1 + i/(2*i+1)*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
3.1413699476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:56:00) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	if n == i-1:
		t = 1+t
	else:
		t = 1 + i/(2*i+1)*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
3.1413699476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:56:05) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	if n == i-1:
		t = 1+t
	else:
		t = 1 + i/(2*i+1)*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- OUTPUT:
3.1413699476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:56:10) 
-- CODE:
n = i = int(input())
t = 1.5
while(i>0):
	if n == i-1:
		t = 1+t
	else:
		t = 1 + i/(2*i+1)*(t)
	i -= 1
pi = 2*t
print(round(pi,10))
-- EXECUTION TIME:
0.198828
-- TEST CASE 1:
---- input:
10
---- correct output:
3.1413699476
---- user output:
3.1413699476
-- TEST CASE 2:
---- input:
150
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 3:
---- input:
100
---- correct output:
3.1415926536 
---- user output:
3.1415926536
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
